UHF-8753: Fix small layout bug caused by changes in the koro rendering

--- a/public/themes/custom/hdbt_subtheme/src/scss/06_components/pages/_application-search.scss
+++ b/public/themes/custom/hdbt_subtheme/src/scss/06_components/pages/_application-search.scss
@@ -200,7 +200,7 @@
     }
   }
 
-  .hds-koros svg pattern {
+  .hds-koros {
     color: var(--color-black-5);
   }
 
